RESOLVED FIXED167839
Plug some leaks in TestController and UIScriptContext.
https://bugs.webkit.org/show_bug.cgi?id=167839
Summary Plug some leaks in TestController and UIScriptContext.
Andreas Kling
Reported 2017-02-04 12:56:47 PST
I have a patch for some leaks spotted on the leaks bot.
Attachments
Patch (4.32 KB, patch)
2017-02-04 12:57 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2017-02-04 12:57:16 PST
WebKit Commit Bot
Comment 2 2017-02-04 13:47:50 PST
Comment on attachment 300638 [details] Patch Clearing flags on attachment: 300638 Committed r211674: <http://trac.webkit.org/changeset/211674>
WebKit Commit Bot
Comment 3 2017-02-04 13:47:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.