Plug some leaks in TestController and UIScriptContext. <https://webkit.org/b/167839>

Reviewed by Alexey Proskuryakov.

Fix a couple of the leaks seen on the leaks bot.

* TestRunnerShared/UIScriptContext/UIScriptContext.cpp:
(UIScriptContext::runUIScript):
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::handleCheckOfUserMediaPermissionForOrigin):
(WTR::TestController::decidePolicyForUserMediaPermissionRequestIfPossible):


Canonical link: https://commits.webkit.org/184877@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211674 268f45cc-cd09-0410-ab3c-d52691b4dbfc