Tools/TestRunnerShared/UIScriptContext/UIScriptContext.cpp
@@ -67,7 +67,8 @@ void UIScriptContext::runUIScript(const String& script, unsigned scriptCallbackI
     
     if (!hasOutstandingAsyncTasks()) {
         JSValueRef stringifyException = nullptr;
-        requestUIScriptCompletion(JSValueToStringCopy(m_context.get(), result, &stringifyException));
+        JSRetainPtr<JSStringRef> stringified(Adopt, JSValueToStringCopy(m_context.get(), result, &stringifyException));
+        requestUIScriptCompletion(stringified.get());
         tryToCompleteUIScriptForCurrentParentCallback();
     }
 }
